# arapy

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  RELEASING.md  credentials.env.example  error.txt  index.html  network_devices_import.csv  network_devices_import.json  profiles.env.example  pyproject.toml
.github/workflows/: package.yml
arapy/: __init__.py  __main__.py  api_catalog.py  api_endpoints.py  clearpass.py  commands.py  config.py  gui.py  io_utils.py  logger.py  main.py  temp.py
arapy/cli/: commands.py  completion.py  copy.py  help.py  main.py  parser.py  server.py
arapy/core/: catalog.py  client.py  config.py  pagination.py  resolver.py
arapy/data/man/: arapy.1
arapy/io/: files.py  output.py
arapy/logging/: setup.py
cache/: api_endpoints_cache.json
examples/: network_device_groups_import.json
man/: arapy.1  netloom-clearpass.7  netloom.1
netloom/: __init__.py  __main__.py  install_manpage.py
netloom/cli/: commands.py  completion.py  copy.py  diff.py  help.py  load.py  main.py  parser.py  server.py
netloom/core/: __init__.py  config.py  help.py  pagination.py  plugin.py  resolver.py
netloom/data/man/: netloom-clearpass.7  netloom.1
netloom/io/: __init__.py  files.py  output.py
netloom/logging/: __init__.py  setup.py
netloom/plugins/clearpass/: __init__.py  catalog.py  clearpass_privilege_mapping.md  client.py  copy_hooks.py  plugin.py  privilege_discovery.py  privileges.py
scripts/: arapy-completion.bash  netloom-completion.bash
tests/: conftest.py  test_catalog.py  test_clearpass.py  test_clearpass_client.py  test_clearpass_client_request.py  test_cli.py  test_commands.py  test_commands_generic_handlers.py  test_copy.py  test_diff.py  test_fuzz.py  test_handlers.py  test_handlers_all_happy_paths.py  test_handlers_extra.py  test_handlers_network_device_group.py  test_help.py  test_integration_cli.py  test_io_utils.py  test_io_utils_new.py  test_list_endpoints.py  test_logger.py  test_main.py  test_main_cli.py  test_manpage.py  test_privileges.py  test_profiles.py  test_version_fallback.py
