[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arapy"
version = "1.5.1"
description = "CLI toolkit for HPE Aruba ClearPass Policy Manager"
readme = "README.md"
authors = [{ name = "Mathias Granlund", email = "mathias.granlund@aranya.se" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["requests>=2.31"]
keywords = ["clearpass", "aruba", "cli", "rest-api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: Other/Proprietary License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/mg-aranya/arapy"
Repository = "https://github.com/mg-aranya/arapy"
Issues = "https://github.com/mg-aranya/arapy/issues"
Changelog = "https://github.com/mg-aranya/arapy/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "hypothesis>=6.0",
    "pytest>=9.0",
    "ruff>=0.15",
    "twine>=6.0",
]

[project.scripts]
arapy = "arapy.cli.main:main"
arapy-install-manpage = "arapy.install_manpage:main"

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["arapy*"]
exclude = ["tests*", "cache*", "logs*", "examples*"]

[tool.setuptools.package-data]
arapy = ["data/man/*.1"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
