[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netloom-tool"
version = "1.7.2"
description = "Spec-driven network API CLI for operators, with first-class ClearPass support"
readme = "README.md"
authors = [
    { name = "Mathias Granlund", email = "mathias.granlund@aranya.se" },
    { name = "Mathias Granlund", email = "contact@netloom.se" },
]
license = "LicenseRef-Proprietary"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = ["requests>=2.31"]
keywords = ["clearpass", "aruba", "cli", "rest-api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://netloom.se"
Repository = "https://github.com/mathias-granlund/netloom"
Issues = "https://github.com/mathias-granlund/netloom/issues"
Changelog = "https://github.com/mathias-granlund/netloom/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "hypothesis>=6.0",
    "pytest>=9.0",
    "ruff>=0.15",
    "twine>=6.0",
]

[project.scripts]
netloom = "netloom.cli.main:main"
netloom-install-manpage = "netloom.install_manpage:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["netloom*"]
exclude = ["tests*", "cache*", "logs*", "examples*"]

[tool.setuptools.package-data]
netloom = ["data/man/*.1"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
